# salessupport

./: Dockerfile  Makefile  README.md  docker-compose.yml  env.example  install_deps.py  migrate-to-gcp.sh  poc_launcher.py  pyproject.toml  pyrightconfig.json  quick_test.bat  requirements.txt  setup_venv.bat  start_app.bat  start_app.ps1  start_docker.bat  start_docker.sh  start_local.sh  test_setup.py
app/: __init__.py  translations.py  ui.py
app/components/: __init__.py  copy_button.py  practical_icebreaker.py  sales_style_diagnosis.py  sales_type.py  (+1 more)
cloudrun/: cloudrun.yaml
config/: settings.json
core/: __init__.py  logging_config.py  models.py  schema.py  validation.py
data/: pre_advice_stub.json  search_cache.json
docs/: AGENT.md  DECISIONS.md  GOOGLE_CLOUD_MIGRATION.md  Localtest.md  PROGRESS.md  WEB_SEARCH.md  WORKLOG.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_57760688d1f824db___init___py.html  z_57760688d1f824db_models_py.html  z_57760688d1f824db_schema_py.html  z_57760688d1f824db_validation_py.html  z_5f5a17c013354698___init___py.html  z_5f5a17c013354698_translations_py.html  z_5f5a17c013354698_ui_py.html  z_b2c40e344f72e223___init___py.html  z_b2c40e344f72e223_history_py.html  z_b2c40e344f72e223_icebreaker_py.html  z_b2c40e344f72e223_post_review_py.html  z_b2c40e344f72e223_pre_advice_py.html  z_b2c40e344f72e223_search_enhancement_py.html  z_b2c40e344f72e223_settings_py.html  z_b51ca83716c2e088___init___py.html  z_b51ca83716c2e088_copy_button_py.html  z_b51ca83716c2e088_practical_icebreaker_py.html  z_b51ca83716c2e088_sales_style_diagnosis_py.html  z_b51ca83716c2e088_sales_type_py.html  z_b51ca83716c2e088_smart_defaults_py.html  z_bba0671063993bf5___init___py.html  z_bba0671063993bf5_llm_openai_py.html  z_bba0671063993bf5_search_provider_py.html  z_bba0671063993bf5_storage_firestore_py.html  z_bba0671063993bf5_storage_gcs_py.html  z_bba0671063993bf5_storage_local_py.html  z_de3833460954761d___init___py.html  z_de3833460954761d_crm_importer_py.html  z_de3833460954761d_di_container_py.html  z_de3833460954761d_error_handler_py.html  z_de3833460954761d_icebreaker_py.html  z_de3833460954761d_logger_py.html  z_de3833460954761d_post_analyzer_py.html  z_de3833460954761d_pre_advisor_py.html  z_de3833460954761d_prompt_manager_py.html  z_de3833460954761d_schema_manager_py.html  (+6 more)
prompts/: __init__.py  icebreaker.yaml  post_review.yaml  pre_advice.yaml  search_enhancement.yaml
providers/: __init__.py  llm_openai.py  search_provider.py  storage_firestore.py  storage_gcs.py  storage_local.py
sales_saas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/: __init__.py  crm_importer.py  di_container.py  error_handler.py  icebreaker.py  logger.py  post_analyzer.py  pre_advisor.py  prompt_manager.py  schema_manager.py  search_enhancer.py  security_utils.py  settings_manager.py  storage_service.py  usage_meter.py  utils.py
tests/: test_copy_button.py  test_crm_importer.py  test_icebreaker.py  test_llm_provider.py  test_post_analyzer.py  test_pre_advice.py  test_pre_advisor.py  test_search_enhancer.py  test_search_provider.py  test_services.py  test_settings_manager.py  test_storage_local.py  test_storage_service.py  test_translations.py  test_ui_language_switch.py  test_utils.py  test_validation.py
(+13 files in other folders)
